@@ -2,6 +2,11 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-02-01 Kimmo
+ PATCH: [ 1636314 ] Fix limiting to single file compare window (2)
+  Fix from Takashi
+  Src: MainFrm.cpp
+
 2007-01-31 Kimmo
  PATCH: [ 1648182 ] Separate Compare options from DiffWrapper
   Src: CompareOptions.h DiffWrapper.h DirDoc.cpp DirDoc.h Merge.dsp
